--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
-    <header>
 
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+              <a class="text-primary display-3 fw-bold text-decoration-none" href="#">Reve<span class="text-secondary">al</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav justify-content-end">
+                  <a class="nav-link text-primary active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link text-primary" href="#">About</a>
+                  <a class="nav-link text-primary" href="#">Services</a>
+                  <a class="nav-link text-primary">Login</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main></main>
