--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,31 +13,101 @@
     <!-- customize -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="text-primary display-3 fw-bold text-decoration-none" href="#">Reve<span class="text-secondary">al</span></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav justify-content-end">
-                  <a class="nav-link text-primary active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link text-primary" href="#">About</a>
-                  <a class="nav-link text-primary" href="#">Services</a>
-                  <a class="nav-link text-primary">Login</a>
+                <a class="text-primary display-4 fw-bold text-decoration-none" href="#">Reve<span
+                        class="text-secondary">al</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link text-primary active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link text-primary" href="#">About</a>
+                        <a class="nav-link text-primary" href="#">Services</a>
+                        <a class="nav-link text-primary">Login</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
+
+        <!-- banner -->
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active h-100">
+                    <div class="d-flex justify-content-center align-items-center banner-img-1">
+                        <div class="text-center">
+                            <h1 class="text-primary display-2 fw-bold">
+                                Making
+                                <span class="text-secondary text-decoration-underline">your ideas</span>
+                                <br> happen!
+                            </h1>
+                            <p class="text-primary">The most informative blockchain news source. Publishing multiple
+                                articles and videosdaily.</p>
+                            <button class="btn btn-primary">Get started</button>
+                            <button class="btn btn-secondary ms-2">Our project</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100">
+                    <div class="d-flex justify-content-center align-items-center banner-img-2">
+                        <div class="text-center">
+                            <h1 class="text-primary display-2 fw-bold">
+                                Making
+                                <span class="text-secondary text-decoration-underline">your ideas</span>
+                                <br> happen!
+                            </h1>
+                            <p class="text-primary">The most informative blockchain news source. Publishing multiple
+                                articles and videosdaily.</p>
+                            <button class="btn btn-primary">Get started</button>
+                            <button class="btn btn-secondary ms-2">Our project</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100">
+                    <div class="d-flex justify-content-center align-items-center banner-img-3">
+                        <div class="text-center">
+                            <h1 class="text-primary display-2 fw-bold">
+                                Making
+                                <span class="text-secondary text-decoration-underline">your ideas</span>
+                                <br> happen!
+                            </h1>
+                            <p class="text-primary">The most informative blockchain news source. Publishing multiple
+                                articles and videosdaily.</p>
+                            <button class="btn btn-primary">Get started</button>
+                            <button class="btn btn-secondary ms-2">Our project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
     </header>
 
-    <main></main>
+    <main>
+
+    </main>
 
     <footer></footer>
     <!-- bootstrap js -->
     <script src="./js/bootstrap.js"></script>
 </body>
+
 </html>
