add who we are section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,31 @@
     </header>
 
     <main>
+        <!-- who we are -->
+        <section class="container my-5 py-5">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div>
+                        <img src="./images/about-img.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div>
+                        <h2 class="text-primary display-6 fw-bold">Who We Are</h2>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim id est laborum.</p>
 
+                        <ul>
+                            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                            <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
+                                pariatur.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
