--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reveal</title>
 
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="./styles/bootstrap.css">
 
@@ -123,6 +128,72 @@
                                 reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
                                 pariatur.</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services -->
+        <section class="container my-5 py-5">
+            <h2 class="display-6 fw-bold text-primary">Services</h2>
+            <p class="mb-4">Retaining customer base is important for any enterprise, it takes great effort to make good
+                customer relationship and minute error can ruin it. Owing to our outstanding customer service we have
+                maintained the 85 % customer retention rate. We, the best IT service provider company in Noida help your
+                business in getting loyalty back by transforming into latest advanced IT technology.</p>
+
+            <div class="container-fluid">
+                <div class="row g-4">
+                    <div class="col-md-6">
+                        <div class="d-md-flex align-items-center gap-3 shadow-lg p-3">
+                            <div>
+                                <i class="fa-solid fa-brain fa-4x text-secondary"></i>
+                            </div>
+                            <div>
+                                <h3 class="text-secondary">Digital Transforming</h3>
+                                <p>Transforming business models of the organization is an important aspect of digital
+                                    transformation, it comprises transforming the business functions, activities,
+                                    processes, models, assets, and activities.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="d-md-flex align-items-center gap-3 shadow-lg p-3">
+                            <div>
+                                <i class="fa-solid fa-swatchbook fa-4x text-secondary"></i>
+                            </div>
+                            <div>
+                                <h3 class="text-secondary">Digital Transforming</h3>
+                                <p>Transforming business models of the organization is an important aspect of digital
+                                    transformation, it comprises transforming the business functions, activities,
+                                    processes, models, assets, and activities.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="d-md-flex align-items-center gap-3 shadow-lg p-3">
+                            <div>
+                                <i class="fa-solid fa-microchip fa-4x text-secondary"></i>
+                            </div>
+                            <div>
+                                <h3 class="text-secondary">Digital Transforming</h3>
+                                <p>Transforming business models of the organization is an important aspect of digital
+                                    transformation, it comprises transforming the business functions, activities,
+                                    processes, models, assets, and activities.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="d-md-flex align-items-center gap-3 shadow-lg p-3">
+                            <div>
+                                <i class="fa-solid fa-magnifying-glass-chart fa-4x text-secondary"></i>
+                            </div>
+                            <div>
+                                <h3 class="text-secondary">Digital Transforming</h3>
+                                <p>Transforming business models of the organization is an important aspect of digital
+                                    transformation, it comprises transforming the business functions, activities,
+                                    processes, models, assets, and activities.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
