add clients section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- Clients -->
+        <section class="container my-5 py-5">
+            <h2 class="display-6 fw-bold text-primary">Clients</h2>
+            <p class="mb-4">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+
+            <div class="d-flex justify-content-evenly align-items-center gap-4 flex-wrap">
+                <img src="./images/clients/client-1.png" class="client-img" alt="">
+                <img src="./images/clients/client-2.png" class="client-img" alt="">
+                <img src="./images/clients/client-3.png" class="client-img" alt="">
+                <img src="./images/clients/client-4.png" class="client-img" alt="">
+                <img src="./images/clients/client-5.png" class="client-img" alt="">
+                <img src="./images/clients/client-6.png" class="client-img" alt="">
+            </div>
+        </section>
     </main>
 
     <footer></footer>
