--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
         <!-- Clients -->
         <section class="container my-5 py-5">
             <h2 class="display-6 fw-bold text-primary">Clients</h2>
-            <p class="mb-4">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+            <p class="mb-4">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse
+                amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute
+                nulla ipsum velit export irure minim illum fore</p>
 
             <div class="d-flex justify-content-evenly align-items-center gap-4 flex-wrap">
                 <img src="./images/clients/client-1.png" class="client-img" alt="">
@@ -211,6 +213,18 @@
                 <img src="./images/clients/client-4.png" class="client-img" alt="">
                 <img src="./images/clients/client-5.png" class="client-img" alt="">
                 <img src="./images/clients/client-6.png" class="client-img" alt="">
+            </div>
+        </section>
+
+        <!-- Call to Action -->
+        <section class="py-5 my-5 bg-primary">
+            <div class="container">
+                <h2 class="display-6 fw-bold text-white">Call to Action</h2>
+                <p class="mb-4 text-white">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+
+                <button class="btn border-1 border-white bg-primary text-white">Call to Action</button>
             </div>
         </section>
     </main>
