add our team section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,52 @@
                 <button class="btn border-1 border-white bg-primary text-white">Call to Action</button>
             </div>
         </section>
+
+        <!-- Our Team -->
+        <section class="container my-5 py-5">
+            <h2 class="display-6 fw-bold text-primary">Our Team</h2>
+            <p class="mb-4">Sit sint consectetur velit quos quisquam cupiditate nemo qui
+            <p>
+
+            <div class="d-flex justify-content-evenly align-items-center gap-4 flex-wrap">
+                <div class="card p-3" style="width: 16rem;">
+                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <div class="card-body text-center">
+                        <h5 class="text-secondary fw-bold">Walter White</h5>
+                        <p class="fst-italic">Chief Executive Officer</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                    </div>
+                </div>
+
+                <div class="card p-3" style="width: 16rem;">
+                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <div class="card-body text-center">
+                        <h5 class="text-secondary fw-bold">Walter White</h5>
+                        <p class="fst-italic">Chief Executive Officer</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                    </div>
+                </div>
+
+                <div class="card p-3" style="width: 16rem;">
+                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <div class="card-body text-center">
+                        <h5 class="text-secondary fw-bold">Walter White</h5>
+                        <p class="fst-italic">Chief Executive Officer</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                    </div>
+                </div>
+
+                <div class="card p-3" style="width: 16rem;">
+                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <div class="card-body text-center">
+                        <h5 class="text-secondary fw-bold">Walter White</h5>
+                        <p class="fst-italic">Chief Executive Officer</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
