--- a/index.html
+++ b/index.html
@@ -245,28 +245,28 @@
                 </div>
 
                 <div class="card p-3" style="width: 16rem;">
-                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <img src="./images/team-2.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
                     <div class="card-body text-center">
-                        <h5 class="text-secondary fw-bold">Walter White</h5>
-                        <p class="fst-italic">Chief Executive Officer</p>
+                        <h5 class="text-secondary fw-bold">Sarah Jhinson</h5>
+                        <p class="fst-italic">Product Manager</p>
                         <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
 
                 <div class="card p-3" style="width: 16rem;">
-                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <img src="./images/team-3.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
                     <div class="card-body text-center">
-                        <h5 class="text-secondary fw-bold">Walter White</h5>
-                        <p class="fst-italic">Chief Executive Officer</p>
+                        <h5 class="text-secondary fw-bold">William Anderson</h5>
+                        <p class="fst-italic">CTO/p>
                         <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
 
                 <div class="card p-3" style="width: 16rem;">
-                    <img src="./images/team-1.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
+                    <img src="./images/team-4.jpg" class="w-50 rounded-circle border border-2 border-primary mx-auto">
                     <div class="card-body text-center">
-                        <h5 class="text-secondary fw-bold">Walter White</h5>
-                        <p class="fst-italic">Chief Executive Officer</p>
+                        <h5 class="text-secondary fw-bold">Amanda Jepson</h5>
+                        <p class="fst-italic">Accountant</p>
                         <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
