--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
                     <div class="card-body text-center">
                         <h5 class="text-secondary fw-bold">Walter White</h5>
                         <p class="fst-italic">Chief Executive Officer</p>
-                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis
+                            perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
 
@@ -249,7 +250,8 @@
                     <div class="card-body text-center">
                         <h5 class="text-secondary fw-bold">Sarah Jhinson</h5>
                         <p class="fst-italic">Product Manager</p>
-                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis
+                            perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
 
@@ -258,7 +260,8 @@
                     <div class="card-body text-center">
                         <h5 class="text-secondary fw-bold">William Anderson</h5>
                         <p class="fst-italic">CTO/p>
-                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis
+                            perspiciatis quaerat qui aut aut aut</p>
                     </div>
                 </div>
 
@@ -267,8 +270,55 @@
                     <div class="card-body text-center">
                         <h5 class="text-secondary fw-bold">Amanda Jepson</h5>
                         <p class="fst-italic">Accountant</p>
-                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+                        <p class="card-text">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis
+                            perspiciatis quaerat qui aut aut aut</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact us -->
+        <section class="container my-5 py-5">
+            <h2 class="display-6 fw-bold text-primary">Contact Us</h2>
+            <p class="mb-4">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse
+                amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute
+                nulla ipsum velit export irure minim illum fore
+            <p>
+
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="d-flex gap-3 align-items-center mb-3">
+                        <i class="fa-solid fa-phone fa-2x text-secondary"></i>
+                        <div>
+                            <h5 class="text-secondary">Phone Number</h5>
+                            <h6 class="text-primary fw-bold">+7377363 344</h6>
+                        </div>
+                    </div>
+                    <div class="d-flex gap-3 align-items-center mb-3">
+                        <i class="fa-solid fa-envelope fa-2x text-secondary"></i>
+                        <div>
+                            <h5 class="text-secondary">Email</h5>
+                            <h6 class="text-primary fw-bold">info@reveal.com</h6>
+                        </div>
+                    </div>
+                    <div class="d-flex gap-3 align-items-center mb-3">
+                        <i class="fa-solid fa-location-dot fa-2x text-secondary"></i>
+                        <div>
+                            <h5 class="text-secondary">Address</h5>
+                            <h6 class="text-primary fw-bold">A108 Adam Street, New York</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <form action="">
+                        <div class="d-flex gap-3">
+                            <input type="text" name="name" class="form-control mb-4" placeholder="Your Name">
+                            <input type="email" name="email" class="form-control mb-4" placeholder="Your Email">
+                        </div>
+                        <input type="text" name="subject" class="form-control mb-4" placeholder="Subject">
+                        <textarea name="" rows="5" class="form-control mb-4" placeholder="Message"></textarea>
+                        <button class="btn btn-secondary">Send Message</button>
+                    </form>
                 </div>
             </div>
         </section>
