--- a/index.html
+++ b/index.html
@@ -325,7 +325,49 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="mt-5 pt-5 bg-primary text-white">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md-3">
+                    <h1 class="display-4 fw-bold">Reveal</h1>
+                    <p>A108 Adam Street, New York, NY 535022, United States</p>
+                    <p>Phone: +098988998 98</p>
+                    <p>Email: info@reveal.com</p>
+                </div>
+
+                <div class="col-md-2">
+                    <h6>Useful Links</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="text-white text-decoration-none">Home</a></li>
+                        <li><a href="" class="text-white text-decoration-none">About</a></li>
+                        <li><a href="" class="text-white text-decoration-none">Contact us</a></li>
+                        <li><a href="" class="text-white text-decoration-none">Login</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h6>Our Services</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="text-white text-decoration-none">IT services</a></li>
+                        <li><a href="" class="text-white text-decoration-none">UX/UI design</a></li>
+                        <li><a href="" class="text-white text-decoration-none">Web development</a></li>
+                        <li><a href="" class="text-white text-decoration-none">App Development</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-5">
+                    <h6>Join Our Newsletter</h6>
+                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+
+                    <form class="d-flex mb-5">
+                        <input type="email" class="form-control bg-white border-0 text-black" placeholder="Enter Your Email">
+                        <button class="btn bg-primary border border-white text-white">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <p class="text-center pb-4 mb-0">© Copyright Reveal. All Rights Reserved</p>
+        </div>
+    </footer>
+
     <!-- bootstrap js -->
     <script src="./js/bootstrap.js"></script>
 </body>
